# sohib-agent-demo

./: data_desc.csv  overall_ranks.csv  research_proposal.md
sohib_agent/: .gitignore  README.md  pyproject.toml
sohib_agent/data/clean/: knowledge_base.json
sohib_agent/prompts/: extract_profile.md  recommendation_answer.md
sohib_agent/src/sohib_agent/: answer_writer.py  build_knowledge_base.py  cli.py  decision_tree.py  h5ad_profile.py  knowledge_base.py  matching.py  method_metadata.py  models.py  profile_extraction.py
task_performance/: Task_1.csv  Task_10.csv  Task_11.csv  Task_12.csv  Task_13.csv  Task_14.csv  Task_15.csv  Task_16.csv  Task_17.csv  Task_18.csv  Task_19.csv  Task_2.csv  Task_20.csv  Task_21.csv  Task_22.csv  Task_23.csv  Task_24.csv  Task_25.csv  Task_26.csv  Task_27.csv  Task_28.csv  Task_29.csv  Task_3.csv  Task_30.csv  Task_31.csv  Task_32.csv  Task_33.csv  Task_4.csv  Task_5.csv  Task_6.csv  Task_7.csv  Task_8.csv  Task_9.csv
